--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>Panda The Bear</title>
-                <meta charset="UTF-8">
+    <meta charset="UTF-8">
 		<link type="text/css" rel="stylesheet" href="style.css"/>
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-                <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+
 	</head>
 
 	<body>
@@ -183,6 +183,8 @@
 			</div>
 
 		</section>
+
+		<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script> -->
 
 	</body>
 </html>
